[package]
name = "crdt"
version = "0.1.0"
edition = "2024"
description = "A production-grade Rust library implementing Conflict-Free Replicated Data Types (CRDTs), WAL persistence, gossip networking, selective undo, and Peritext rich text formatting."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeevan4476/crdt"
readme = "README.md"
keywords = ["crdt", "distributed-systems", "gossip", "replication", "eventual-consistency"]
categories = ["data-structures", "network-programming", "database-implementations"]

[dependencies]
postcard = { version = "1.0", features = ["alloc", "use-std"] }
serde = { version = "1.0.229", features = ["derive"] }
wincode = { version = "0.6.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.151"
